# Accessor

./: .gitignore  01_AXPYDesign.md  02_SpMVDesign.md  API_DOC.md  CMakeLists.txt  DESIGN_CHANGELOG.md  InitialProto.md  Makefile  README.md  并行迭代Accessor框架规范设计草案 (综合版 V1.0).md
.clinerules/workflows/: git-commit-workflow.md
include/accessor/core/: access_mode.hpp  accessor.hpp  csr_matrix.hpp  custom_parallel_for.hpp  permission_check.hpp
include/accessor/iteration/: csr_rows.hpp
include/accessor/traits/: csr_matrix_traits.hpp  data_structure_traits.hpp  dense_array_traits.hpp
src/test/: 03_parallel_param.md  test_accessor.cpp  test_spmv.cpp
